# pyo3-typecheck

./: .gitignore  Cargo.toml  runme.py
consumer/: Cargo.toml
consumer/src/: lib.rs
producer/: Cargo.toml
producer/src/: lib.rs
