[package]
name = "consumer"
version = "0.1.0"
authors = ["Benjamin Naecker <bnaecker@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
producer = {path = "../producer"}
pyo3 = "*"

[lib]
name = "consumer"
crate-type = ["rlib", "cdylib"]
