[package]
name = "producer"
version = "0.1.0"
authors = ["Benjamin Naecker <bnaecker@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "*"

[lib]
name = "producer"
crate-type = ["rlib", "cdylib"]
